--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
       <include src="./partials/stay-updated.html"></include>
     </main>
 
+    <include src="./partials/footer-orange.html"></include>
     <include src="./partials/footer.html"></include>
     <script type="module" src="./index.js"></script>
   </body>
