--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter&family=Mulish&display=swap"
       rel="stylesheet"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <link
       rel="stylesheet"
@@ -48,6 +50,7 @@
       <include src="./partials/mix-form.html"></include>
       <include src="./partials/price.html"></include>
       <include src="./partials/stay-updated.html"></include>
+      <include src="./partials/scroll-to-top.html"></include>
     </main>
 
     <include src="./partials/footer-orange.html"></include>
